client: various