@@ -125,6 +125,7 @@ javafx {
             "--add-exports=javafx.base/com.sun.javafx.collections=ALL-UNNAMED",
             "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
             "--add-exports=javafx.base/com.sun.javafx.logging=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
